# dinomem-bench

./: .gitignore  CONTRIBUTING.md  DESIGN.md  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: bench.yml
agentmem_bench/: adapter.py
agentmem_bench/scenarios/: base.py  s1_contradictory.py  s6_policy.py  s7_operational.py
agentmem_bench/suts/: __init__.py  agentmem.py  supermemory.py
configs/: README.md  cognee.json  dinomem.json  langmem.json  mem0.json  pgvector.json  supermemory.json  zep.json
dinomem_bench/: __init__.py  __main__.py  adapter.py  compare.py  config.py  cost.py  models.py  runner.py  types.py
dinomem_bench/scenarios/: s1_contradictory.py  s2_temporal.py  s3_scope.py  s4_crdt.py  s5_isolation.py  s6_policy.py  s7_operational.py
dinomem_bench/suts/: __init__.py  cognee_sut.py  dinomem.py  fake.py  langmem.py  mem0.py  pgvector.py  supermemory.py  zep.py
human_validation/: README.md  SAMPLE.md  samples.jsonl  validate.py
notes/: agentmem-adapter.md  blog-draft.md  cognee-adapter.md  dinomem-adapter.md  langmem-adapter.md  mem0-adapter.md  pgvector-adapter.md  supermemory-adapter.md  zep-adapter.md
paper/: .gitignore  ARXIV.md  Makefile  agentmem-bench.md  agentmem-bench.tex  dinomem-bench.md  dinomem-bench.tex  make_figures.py  refs.bib
results/: COMPARISON.md
tests/: test_smoke.py
